<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        android:icon="@drawable/menu_ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_order_by_recent"
        android:orderInCategory="200"
        android:title="@string/menu_recent"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order_by_populate"
        android:orderInCategory="300"
        android:title="@string/menu_populate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order_by_interest"
        android:orderInCategory="400"
        android:title="@string/menu_interest_recipe"
        app:showAsAction="never" />
</menu>
