<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_id_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:met_underlineColor="@color/cooxing_main_color"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/cooxing_main_color"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pw_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textPassword"
        app:met_underlineColor="@color/cooxing_main_color"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/cooxing_main_color"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="#d2d2d3"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_find_password"
        android:id="@+id/text_find_password_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="7dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_kakao"
            android:id="@+id/text_kakao_login"
            android:gravity="center"
            android:background="#d2d2d3"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:id="@+id/text_facebook_login"
            android:gravity="center"
            android:background="#d2d2d3"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:id="@+id/text_signup_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:padding="10dp" />

</LinearLayout>
