<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/text_clause_use_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/clause_service_clause" />
            </ScrollView>

            <CheckBox
                android:id="@+id/check_clause_use_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/clause_check_use_agree" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/text_clause_personal_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/clause_personal_information_policy" />
            </ScrollView>

            <CheckBox
                android:id="@+id/check_clause_personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/clause_check_personal_information" />

            <TextView
                android:id="@+id/text_clause_ok"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#000000"
                android:background="#d2d2d3"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
