<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ljaymori.cooxing.signup.SignupActivity"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_id_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_id_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_password_check_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password_check_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_nickname_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_nickname_hint"
        android:textCursorDrawable="@drawable/text_cursor_cooxing"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/view_agree_signup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/text_agree_signup"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/check_off"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_clause_policy" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_submit_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_submit"
        android:background="#d2d2d3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />

</LinearLayout>
