<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.ljaymori.cooxing.search.SearchActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_tab_cover_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_recipe_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/search_tab_top_bottom_margin"
            android:layout_marginLeft="@dimen/search_tab_left_right_margin"
            android:layout_marginTop="@dimen/search_tab_top_bottom_margin"
            android:layout_weight="1"
            android:background="@drawable/background_tab_unfocused_left"
            android:gravity="center"
            android:text="@string/search_recipe"
            android:textColor="@color/tab_unselected_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_user_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/search_tab_top_bottom_margin"
            android:layout_marginRight="@dimen/search_tab_left_right_margin"
            android:layout_marginTop="@dimen/search_tab_top_bottom_margin"
            android:layout_weight="1"
            android:background="@drawable/background_tab_unfocused_right"
            android:gravity="center"
            android:text="@string/search_user"
            android:textColor="@color/tab_unselected_text"
            android:textSize="15sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/text_no_result_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_empty_profile_tab"
            android:gravity="center"
            android:text="@string/search_message_no_result"
            android:textColor="#5b5b5b"
            android:textSize="17sp" />


        <FrameLayout
            android:id="@+id/view_search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4000">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_search_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>


    </FrameLayout>

</LinearLayout>
